Changes to fix layout and css overlapping (#48)
* Website overhaul and modifications

* Update requested changes to files

* Update package.json

* Add newsletter image back

* adding change from updateChanges branch

* fix linter errors for App.tsx

* Add semicolong and fix more linter errors

* Remove package-lock.json and remove firebase export

* yarn file

* fix linting issues

* fix emailbox

* fix emailbox

* fix emailbox

* temp changes

* temp changes

* add message function

* change to blog

* changes

* Fix css problems

* changes

* changes

* fix all blog css problems

* Fix all layout and display bugs

* remove unnecessary firebase.js file

--- a/src/css/BlogList.module.css
+++ b/src/css/BlogList.module.css
@@ -1,21 +1,19 @@
-
 .Post { 
-    position: relative;
-    width: 723px;
-    height: 678px;
-    left: 25%;
-    top: 171px;
-
+    width: 65%;
+    display: block;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px black solid;
+    margin-bottom: 10px;
+    margin-top: 10px;
     background: #FFFFFF;
+    top: 150px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 12px;
+    border-radius: 20px; 
 }
 
 .title {
-    position: absolute;
-    left: 76px;
-    top: 80px;
-
     font-family: DM Sans;
     font-style: normal;
     font-weight: bold;
@@ -27,11 +25,7 @@
 }
 
 .date {
-    position: absolute;
-
-    height: 31px;
-    left: 122px;
-    top: 127px;
+    margin: auto;
 
     font-family: DM Sans;
     font-style: normal;
@@ -44,18 +38,18 @@
 }
 
 .snap {
-    position: absolute;
-    width: 570px;
-    height: 342px;
-    left: 76px;
-    top: 168px;
-
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 @media screen and (max-width: 840px) {
     .Post {
-        width: 50%;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
     }
+
     .title {
         left: 25%;
         right: 25%;
